# fsfat

./: .gitignore  AUTOMAKE.md  FatConfig.h  FatDefs.h  Makefile  Makefile.am  NameSpaces.h  README.md  configure.ac  fsfat.c  fsfat.h  main.c
FatIfc/Inc/: FatApi.h
FatIfc/Src/: FatApi.c
FatLib/: FatConf.h  FatDef.h
FatLib/DefList/: Fields.h  Status.h  StdTypes.h  Types.h
FatLib/Short/: Fields.h
FatLibIfc/Inc/: LocCnt.h
FatLibIfc/Src/: LocCnt.c
FatTst/Inc/: FatTestLib.h
FatTst/Src/: FatTestLib.c
old/: NameSpaces.h  fsfat.c  fsfat.h
